@@ -1,3 +1,8 @@
+2008-02-09  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* panel-toplevel.c: (panel_toplevel_expose):
+	Fix bug #497998. This correct the orientation of the panel handles.
+
 ==================== 2.21.90 ====================
 
 2008-01-29  Elijah Newren  <newren gnome org>
